--- a/contract-renewal/assets/create_contract.html
+++ b/contract-renewal/assets/create_contract.html
@@ -322,16 +322,17 @@
                 </li>
                 <li role="presentation">
                     <a href="#history-container" aria-controls="history-container" role="tab" data-toggle="tab">
-                        history
+                        History
+                        <i class="glyphicon glyphicon-triangle-top"></i>
+                    </a>
+                </li>
+                <li role="presentation">
+                    <a href="#notifications-container" aria-controls="notifications-container" role="tab" data-toggle="tab">
+                        Notifications
                         <i class="glyphicon glyphicon-triangle-top"></i>
                     </a>
                 </li>
             </ul>
-            <!--<div class="panel panel-primary">-->
-                <!--<div class="panel-heading">-->
-                    <!---->
-                <!--</div>-->
-            <!--</div>-->
 
 
             <!-- Tab panes -->
@@ -341,6 +342,99 @@
                 </div>
                 <div role="tabpanel" class="tab-pane" id="history-container">
                     <div id="history_grid"></div>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="notifications-container">
+
+                    <div class="form-horizontal">
+                        <div class="row">
+                            <div class="col-sm-4">
+
+
+
+                                        <div class="form-group">
+                                            <label for="notification_days" class="control-label">Days Prior to expiration, email to be sent</label>
+                                            <div class="">
+                                                <input type="number" class="form-control notification-days-text"
+                                                       id="notification_days"
+                                                       name="notification_days"/>
+                                            </div>
+                                        </div>
+
+
+                                        <div class="checkbox">
+                                            <div class="">
+                                                <label for="notification_5_days">
+                                                    <input type="checkbox" class="notification-5-days"
+                                                           id="notification_5_days"
+                                                           name="notification_5_days" />
+                                                    Send email before 5 days of contract expiration
+                                                </label>
+                                            </div>
+                                        </div>
+
+
+                                        <div class="checkbox">
+                                            <div class="">
+                                                <label for="notification_3_days">
+                                                    <input type="checkbox" class="notification-3-days"
+                                                           id="notification_3_days"
+                                                           name="notification_3_days" />
+                                                    Send email before 3 days of contract expiration
+                                                </label>
+                                            </div>
+                                        </div>
+
+                                        <div class="checkbox">
+                                            <div class="">
+                                                <label for="notification_1_day">
+                                                    <input type="checkbox" class="notification-1-day"
+                                                           id="notification_1_day"
+                                                           name="notification_1_day" />
+                                                    Send email before 1 day of contract expiration
+                                                </label>
+                                            </div>
+                                        </div>
+
+
+                                        <div class="checkbox">
+                                            <div class="">
+                                                <label for="notification_expiration">
+                                                    <input type="checkbox" class="notification-expiration"
+                                                           id="notification_expiration"
+                                                           name="notification_expiration" />
+                                                    Send email on contract expiration
+                                                </label>
+                                            </div>
+                                        </div>
+
+
+                                        <div class="checkbox">
+                                            <div class="">
+                                                <label for="notification_renewal">
+                                                    <input type="checkbox" class="notification-renewal"
+                                                           id="notification_renewal"
+                                                           name="notification_renewal" />
+                                                    Send email on Contract Renewal
+                                                </label>
+                                            </div>
+                                        </div>
+
+                                        <div class="checkbox">
+                                            <div class="">
+                                                <label for="notification_quote_generation">
+                                                    <input type="checkbox" class="notification-quote-generation"
+                                                           id="notification_quote_generation"
+                                                           name="notification_quote_generation" />
+                                                    Send email on Quote Generation
+                                                </label>
+                                            </div>
+                                        </div>
+
+
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
@@ -518,7 +612,7 @@
 
     <!-- All Scripts should go below -->
     <script>
-        document.title = '{{ title }}'.replace('<i class="fa fa-file-text-o"></i>', '');
+        document.title = "{{ title }}".replace('<i class="fa fa-file-text-o"></i>', '');
         window.$ = (window.NS && window.NS.jQuery) || window.jQuery;
         window.pageType = '{{ type }}';
         window.apiSuiteletUrl = '{{ apiSuiteletUrl }}';
