--- a/contract-renewal/assets/list_contracts.html
+++ b/contract-renewal/assets/list_contracts.html
@@ -117,7 +117,7 @@
                                             <option value="1" selected="selected">Pending Rep Approval</option>
                                             <option value="2" selected="selected">Pending Customer Approval</option>
                                             <option value="3" selected="selected">Approved</option>
-                                            <option value="4" selected="selected">Expired</option>
+                                            <option value="4">Expired</option>
                                             <option value="5">Void</option>
                                         </select>
                                     </div>
