--- a/contract-renewal/assets/create_contract.html
+++ b/contract-renewal/assets/create_contract.html
@@ -70,10 +70,7 @@
                         <div class="row">
                             <div class="col-sm-8">
 
-                                <div class="form-group"
-                                     data-html="true"
-                                     rel="tooltip"
-                                     title="Enter contract# here. If no vendor based contract# exists, enter in the following format; <br> (vendor)(numeric value)-(customer) <br> Example: Foundry1-Blur Studio">
+                                <div class="form-group">
                                     <label for="contract_number" class="control-label">
                                         Contract #
                                         <span class="mandatory">*</span>
@@ -83,7 +80,14 @@
                                     <div class="">
                                         <input type="text" class="form-control contract-number-text"
                                                id="contract_number"
-                                               name="contract_number"/>
+                                               name="contract_number"
+                                               data-toggle="popover"
+                                               data-trigger="focus"
+                                               data-content="Enter contract# here. If no vendor based contract# exists,
+                                                        enter in the following format; <br>
+                                                        <i>(vendor)(numeric value)-(customer)</i> <br>
+                                                        Example: Foundry1-Blur Studio"
+                                        />
                                         <!--<p class="form-control-static">email@example.com</p>-->
                                     </div>
                                 </div>
@@ -312,6 +316,15 @@
                                             <span class="input-group-addon"><i
                                                     class="glyphicon glyphicon-calendar"></i></span>
                                         </div>
+                                    </div>
+                                </div>
+
+                                <div class="form-group form-group-is-renew" style="display: none;">
+                                    <label for="is_renew" class="control-label">Is Renew?</label>
+                                    <div class="">
+                                        <input type="checkbox" class="is-renew-checkbox"
+                                               id="is_renew"
+                                               name="is_renew"/>
                                     </div>
                                 </div>
 
@@ -651,11 +664,11 @@
         //window.priceLevels = {{ priceLevels }};
     </script>
     <script type="text/javascript"> window.$ || document.write('<script src="{{ jquery-1.11.0.min.js }}">\x3C/script>')</script>
+    <script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
     <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"
             integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
             crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
     <script type="text/javascript" src="{{ jstorage.js }}"></script>
     <script type="text/javascript" src="{{ typeahead.jquery.min.js }}"></script>
     <script type="text/javascript" src="{{ bootstrap-datepicker.min.js }}"></script>
