--- a/contract-renewal/assets/list_contracts.html
+++ b/contract-renewal/assets/list_contracts.html
@@ -66,6 +66,21 @@
                                     </div>
                                 </div>
 
+
+                                <div class="form-group">
+                                    <label for="vendor" class="control-label">Contract Vendor <span
+                                            class="mandatory">*</span></label>
+
+                                    <div class="">
+                                        <select class="form-control vendor-dropdown"
+                                                id="vendor"
+                                                name="vendor">
+                                            <option value="" selected="selected"></option>
+
+                                        </select>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
