added discount field on contract

--- a/contract-renewal/assets/create_contract.html
+++ b/contract-renewal/assets/create_contract.html
@@ -254,6 +254,20 @@
                                     </div>
                                 </div>
 
+
+                                <div class="form-group">
+                                    <label for="status" class="control-label">Discount <span
+                                            class="mandatory">*</span></label>
+
+                                    <div class="">
+                                        <select class="form-control discount-dropdown"
+                                                id="discount"
+                                                name="discount">
+                                            <option value="" selected="selected"></option>
+                                        </select>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
