fixed discount item issue

--- a/contract-renewal/assets/create_contract.html
+++ b/contract-renewal/assets/create_contract.html
@@ -618,6 +618,14 @@
                             </div>
                         </div>
 
+                        <div class="form-group">
+                            <label class="control-label">Discount</label>
+
+                            <div class="">
+                                {{= typeof (custrecord_f3mm_discount_item_text) === 'undefined' ? '' : custrecord_f3mm_discount_item_text }}
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
