minor issues fixing  - quote checkbox was not working properly.  - removed mandatory field from discount item  - fixed days remaining issue of contract expiry

--- a/contract-renewal/assets/create_contract.html
+++ b/contract-renewal/assets/create_contract.html
@@ -256,8 +256,7 @@
 
 
                                 <div class="form-group">
-                                    <label for="status" class="control-label">Discount <span
-                                            class="mandatory">*</span></label>
+                                    <label for="status" class="control-label">Discount</label>
 
                                     <div class="">
                                         <select class="form-control discount-dropdown"
