--- a/contract-renewal/assets/approve_contracts.html
+++ b/contract-renewal/assets/approve_contracts.html
@@ -16,7 +16,7 @@
 <body class="{{ standaloneClass }}">
 
     <!-- we need following class on both elements. body is used for standalone, below div is used for inline in netsuite -->
-    <div class="{{ standaloneClass }} container">
+    <div class="{{ standaloneClass }} container-fluid">
         <div class="f3mm-contract-renewal container-fluid contracts-approval-page">
 
             <div class="row">
@@ -49,7 +49,7 @@
                                 </div>
 
 
-                                <div class="form-group">
+                                <div class="form-group form-group-customer hidden">
                                     <label for="customer" class="control-label">Customer</label>
                                     <div class="">
                                         <input class="typeahead form-control customer-dropdown"
@@ -114,7 +114,7 @@
                         <div class="row">
                             <div class="col-sm-8">
 
-                                <div class="form-group">
+                                <div class="form-group form-group-status hidden">
                                     <label for="status" class="control-label">Status</label>
 
                                     <div class="">
@@ -199,6 +199,8 @@
         window.pageType = '{{ type }}';
         window.apiSuiteletUrl = '{{ apiSuiteletUrl }}';
         window.createSuiteletUrl = '{{ createSuiteletUrl }}';
+        window.userType = '{{ userType }}';
+        window.userid = '{{ userid }}';
     </script>
     <script type="text/javascript"> window.$ || document.write('<script src="{{ jquery-1.11.0.min.js }}">\x3C/script>')</script>
     <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"
