Changes said by customer:
iv) View Quote button to be provided on Sales Rep dashboard - DONE

vii) customer should have option to edit notifications - DONE

viii) user event to redirect user to new contract page. - DONE

x) added a checkbox for Quote Approval notification in Notification section of Create / Edit Contract screen. - DONE

--- a/contract-renewal/assets/create_contract.html
+++ b/contract-renewal/assets/create_contract.html
@@ -488,6 +488,17 @@
                                 </div>
 
 
+                                <div class="checkbox">
+                                    <div class="">
+                                        <label for="notification_quote_approval">
+                                            <input type="checkbox" class="notification-quote-approval"
+                                                   id="notification_quote_approval"
+                                                   name="notification_quote_approval" />
+                                            Quote Approval
+                                        </label>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
