--- a/contract-renewal/assets/approve_contracts.html
+++ b/contract-renewal/assets/approve_contracts.html
@@ -185,6 +185,111 @@
     </div>
 
 
+
+    <div class="modal fade modal-notifications" tabindex="-1" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Notifications</h4>
+                </div>
+                <div class="modal-body">
+
+                    <div class="form-horizontal">
+                        <div class="row">
+                            <div class="col-sm-6">
+
+                    <b>SEND EMAIL BEFORE:</b>
+                    <div class="checkbox">
+                        <div class="">
+                            <label for="notification_5_days">
+                                <input type="checkbox" class="notification-5-days"
+                                       id="notification_5_days"
+                                       name="notification_5_days" />
+                                5 days of contract expiration
+                            </label>
+                        </div>
+                    </div>
+
+
+                    <div class="checkbox">
+                        <div class="">
+                            <label for="notification_3_days">
+                                <input type="checkbox" class="notification-3-days"
+                                       id="notification_3_days"
+                                       name="notification_3_days" />
+                                3 days of contract expiration
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="checkbox">
+                        <div class="">
+                            <label for="notification_1_day">
+                                <input type="checkbox" class="notification-1-day"
+                                       id="notification_1_day"
+                                       name="notification_1_day" />
+                                1 day of contract expiration
+                            </label>
+                        </div>
+                    </div>
+
+
+
+                    </div>
+                            <div class="col-sm-6">
+
+                    <b>SEND EMAIL ON:</b>
+
+                    <div class="checkbox">
+                        <div class="">
+                            <label for="notification_expiration">
+                                <input type="checkbox" class="notification-expiration"
+                                       id="notification_expiration"
+                                       name="notification_expiration" />
+                                contract expiration
+                            </label>
+                        </div>
+                    </div>
+
+
+                    <div class="checkbox">
+                        <div class="">
+                            <label for="notification_renewal">
+                                <input type="checkbox" class="notification-renewal"
+                                       id="notification_renewal"
+                                       name="notification_renewal" />
+                                Contract Renewal
+                            </label>
+                        </div>
+                    </div>
+
+
+                                <div class="checkbox">
+                                    <div class="">
+                                        <label for="notification_quote_approval">
+                                            <input type="checkbox" class="notification-quote-approval"
+                                                   id="notification_quote_approval"
+                                                   name="notification_quote_approval" />
+                                            Quote Approval
+                                        </label>
+                                    </div>
+                                </div>
+
+</div></div></div>
+
+
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary btn-submit">Save changes</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+
     <!-- Loading Div -->
     <div class="contract-loading-backdrop modal-backdrop fade in"></div>
     <div class="contract-loading in">
